wip: add verify at swagger, add router for verify, fix login function
