# src/routes/auth-router.ts
@@ -1,8 +1,13 @@
-import { createUser, login } from "../controllers/auth-controller.js";
+import {
+  createUser,
+  emailVerification,
+  login,
+} from "../controllers/auth-controller.js";
 import express from "express";
 
 const authRouter = express.Router();
 authRouter.post("/register", createUser);
 authRouter.post("/login", login);
+authRouter.post("/verify", emailVerification);
 
 export default authRouter;
